<resources>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="app_name">Lauditor</string>
    <string name="button">Button</string>
    <string name="my_day">My Day</string>
    <string name="kpis">KPIs</string>
    <string name="meeting">Meeting</string>
    <string name="_09_00_to_09_30">09:00 to 09:30</string>
    <string name="meeting_with_tripathi">Meeting with Tripathi</string>
    <string name="todo">TODO</string>
    <string name="create_group">Create Group</string>
    <string name="create_members">Create Members</string>
    <string name="view_group">View Group</string>
    <string name="view_members">View Members</string>
    <string name="group_name">Group Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="designation">Designation</string>
    <string name="default_currency">Default Currency</string>
    <string name="default_rate">Default Rate</string>
    <string name="description">Description</string>
    <string name="select_team_member">Select Team Member</string>
    <string name="assign_group">Assign Group</string>
    <string name="add_team_member">Add Team Member</string>
    <string name="add_practice_head">Add Group Head</string>
    <string name="select_all">Select All</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="assign">Assign</string>
    <string name="category">Category</string>
    <string name="team_members">Team Members</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_relationships">Add Relationships</string>
    <string name="view_relationships">View Relationships</string>
    <string name="search">Search</string>
    <string name="search_team_members">Search Team Members</string>
    <string name="first_name">First Name</string>
    <string name="country">Country</string>
    <string name="entity_name">Entity Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="last_name">Last Name</string>
    <string name="contact_phone_number">Contact Phone Number</string>
    <string name="send_request">Send Request</string>
    <string name="profile">Profile</string>
    <string name="share_document">Share Document</string>
    <string name="unshare">Unshare</string>
    <string name="tag_type">Tag Type</string>
    <string name="tag">Tag</string>
    <string name="edit_meta_data">Edit Meta Data</string>
    <string name="document_name">Document Name</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="photo_library">Photo Library</string>
    <string name="document">Document</string>
    <string name="add_tag">Add Tag</string>
    <string name="upload">Upload</string>
    <string name="select_document_type">Select Document Type</string>
    <string name="created">Created:</string>
    <string name="expiration">Expiration:</string>
    <string name="documents">Documents</string>
    <string name="title">Title</string>
    <string name="case_number">Case Number</string>
    <string name="matter_num">Matter Num</string>
    <string name="matter_title">Matter Title</string>
    <string name="case_type">Case Type</string>
    <string name="date_of_filing">Date of Filing</string>
    <string name="court">Court</string>
    <string name="judge_s">Judge(s)</string>
    <string name="judge">Judge</string>
    <string name="case_priority">Case Priority</string>
    <string name="legal_matter">Legal Matter</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="add_opponent_advocate">Add Opponent Advocate</string>
    <string name="add">Add</string>
    <string name="add_groups">Add Groups</string>
    <string name="add_clients">Add Clients</string>
    <string name="assigned_team_members">Assigned Team Members</string>
    <string name="assign_team_members">Assign Team Members</string>
    <string name="general_matter">General Matter</string>
    <string name="document_library">Document Library</string>
    <string name="device_drive">Device/Drive</string>
    <string name="add_documents">Add Documents</string>
    <string name="phone_number">Phone Number</string>
    <string name="assign_team_member">Assign Team Member</string>
    <string name="project">Project</string>
    <string name="task">Task</string>
    <string name="date">Date</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="total_hours">Total Hours</string>
    <string name="_45">45</string>
    <string name="_30">30</string>
    <string name="_15">15</string>
    <string name="time">Time</string>
    <string name="event_start_time">Event Start Time</string>
    <string name="event_end_time">Event End Time</string>
    <string name="time_zone">Time Zone</string>
    <string name="meeting_link">Meeting Link</string>
    <string name="dailing_link">Dailing Link</string>
    <string name="location">Location</string>
    <string name="matter_name">Matter Name</string>
    <string name="add_team_members">Add Team members</string>
    <string name="add_entity">Add Entity</string>
    <string name="client_team_members">Client Team Members</string>
    <string name="msg">Message</string>
    <string name="client">Client</string>
    <string name="teams">Teams</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>