<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@drawable/dashboard_screens_background"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_time_meeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_gravity="center"
            android:contentDescription="@string/todo"

            android:src="@drawable/group_icon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/Blue_text_color"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:textSize="@dimen/Login_header"
            android:text="@string/meeting"
             />

            <TextView
                android:id="@+id/tv_count_meeting"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:background="@drawable/round_buttons_meeting_card"
                android:textSize="@dimen/Fifteen_dp"
                android:textColor="@color/white"
                android:text="1"
                />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_time_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/_09_00_to_09_30"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        app:layout_constraintEnd_toStartOf="@id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/ll_1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Subject"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_subject_meeting"
        app:layout_constraintEnd_toStartOf="@id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_meeting" />

    <TextView
        android:id="@+id/tv_subject_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/meeting_with_tripathi"
        android:textColor="@color/Blue_text_color"
        app:layout_constraintEnd_toStartOf="@id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="332dp" />
</androidx.constraintlayout.widget.ConstraintLayout>