
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="50dp"
        android:paddingTop="@dimen/twenty_dp"
        android:paddingEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013">

        <TextView
            android:id="@+id/tv_create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_left_background"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="10dp"
            android:text="@string/create_group"
            android:textColor="@color/black"
            android:textSize="@dimen/Fifteen_dp">

        </TextView>

        <TextView
            android:id="@+id/tv_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_right_background"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="10dp"
            android:text="@string/view_group"
            android:textColor="@color/black"
            android:textSize="@dimen/Fifteen_dp">

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        android:elevation="@dimen/Fifty_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/group_name"
                    android:textColor="@color/Blue_text_color"
                    android:textSize="@dimen/Fifteen_dp">

                </TextView>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="10dp"
                    android:src="@drawable/asterisk_icon">

                </ImageView>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name"
                app:boxBackgroundMode="none"
                android:textColorHint="@color/black">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:background="@drawable/rectangle_grey_background"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/description"
                    android:textColor="@color/Blue_text_color"
                    android:textSize="@dimen/Fifteen_dp">

                </TextView>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="10dp"
                    android:src="@drawable/asterisk_icon">

                </ImageView>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:boxBackgroundMode="none"
                android:inputType="text|textMultiLine"
                android:textColorHint="@color/black">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                  android:background="@drawable/rectangle_grey_background"

                     />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_grey_background"
                android:hint="@string/description"
                app:hintAnimationEnabled="true"
                android:padding="@dimen/Fifteen_dp"
                android:textColorHint="@color/black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="@dimen/Fifteen_dp"
                    android:text="@string/select_team_member">

                </TextView>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_details"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/add_tm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_left_background"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="10dp"
            android:text="@string/add_team_member"
            android:textColor="@color/black"
            android:textSize="@dimen/Fifteen_dp">

        </TextView>

        <TextView
            android:id="@+id/add_phead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_right_background"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="10dp"
            android:text="@string/add_practice_head"
            android:textColor="@color/black"
            android:textSize="@dimen/Fifteen_dp">

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:background="@drawable/checkbox_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat1"
        app:layout_constraintVertical_bias="0.0">

        <CheckBox
            android:id="@+id/chk_select_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:layout_margin="10dp"
            android:text="@string/select_all"
            android:buttonTint="@color/grey_color_dark"
            android:background="@color/grey_text_color"
            android:layout_gravity="center"

            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_details_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_select_all"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingBottom="50dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_tm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="Search Team Members"

                android:textColorHint="@color/black"
                app:boxBackgroundMode="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_details_2"
                app:layout_constraintVertical_bias="0.0">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_search_tm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@drawable/rectangle_grey_background"
                    android:drawableRight="@drawable/search_groups"
                    android:gravity="start" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Head of the Practice"
                android:textSize="@dimen/twenty_dp"
                android:textColor="@color/Blue_text_color"
                android:visibility="gone"
                android:fontFamily="sans-serif-condensed">

            </TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_selected_tm"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"

                android:layout_margin="10dp"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal"

              >

             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_cancel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginLeft="20dp"
                 android:elevation="20dp"

                 android:layout_marginRight="20dp"
                 android:background="@drawable/cancel_button_background"
                android:textAllCaps="false"
                 android:text="@string/cancel">

             </androidx.appcompat.widget.AppCompatButton>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:elevation="@dimen/Fifteen_dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/save_button_background"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/Blue_text_color"
                    android:text="@string/save">

                </androidx.appcompat.widget.AppCompatButton>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Search Groups"

        android:textColorHint="@color/black"
        app:boxBackgroundMode="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_details_2"
        app:layout_constraintVertical_bias="0.0">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:visibility="gone"
            android:background="@drawable/rectangle_grey_background"
            android:drawableRight="@drawable/search_groups"
            android:gravity="start" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_view_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>